--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@rollup/plugin-babel": "^6.0.3"
+  }
 }
